Homepage text issue on IE added flex styles (#62)

--- a/app/design/frontend/Limitless/hudsonreed/web/css/styles.less
+++ b/app/design/frontend/Limitless/hudsonreed/web/css/styles.less
@@ -60,6 +60,12 @@
       max-width: 100%;
       padding: 0;
       margin: 0;
+      -webkit-flex-grow: 1;
+      flex-grow: 1;
+      -webkit-flex-shrink: 0;
+      flex-shrink: 0;
+      -webkit-flex-basis: auto;
+      flex-basis: auto;
     }
   }
 
